{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 172,
  "lineage": "b4e83491-66de-1be4-6231-326b9bfe4000",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "mysql_private_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.240.0.36",
            "address_type": "INTERNAL",
            "creation_timestamp": "2022-06-10T04:43:50.882-07:00",
            "id": "projects/sunlit-flag-351808/regions/asia-southeast2/addresses/mysql-ip",
            "name": "mysql-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "sunlit-flag-351808",
            "purpose": "GCE_ENDPOINT",
            "region": "asia-southeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sunlit-flag-351808/regions/asia-southeast2/addresses/mysql-ip",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/sunlit-flag-351808/regions/asia-southeast2/subnetworks/webapi-subnet",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/sunlit-flag-351808/zones/asia-southeast2-c/instances/mysql-instance"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "webapi_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/sunlit-flag-351808/regions/asia-southeast2/instanceGroups/webapi-mig",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2022-06-07T11:33:44.738-07:00",
            "enable_cdn": false,
            "fingerprint": "EWP5EybIe4s=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/sunlit-flag-351808/global/healthChecks/webapi-lb-hc"
            ],
            "id": "projects/sunlit-flag-351808/global/backendServices/webapi-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "webapi-backend-service",
            "port_name": "http",
            "project": "sunlit-flag-351808",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sunlit-flag-351808/global/backendServices/webapi-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_health_check.webapi_lb_hc",
            "module.container-vm.data.google_compute_image.coreos",
            "module.vm_instance_template.google_compute_instance_template.tpl",
            "module.vm_mig.data.google_compute_zones.available",
            "module.vm_mig.google_compute_health_check.http",
            "module.vm_mig.google_compute_health_check.https",
            "module.vm_mig.google_compute_health_check.tcp",
            "module.vm_mig.google_compute_region_instance_group_manager.mig"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_health_checks",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-06-07T11:31:53.438-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sunlit-flag-351808/global/firewalls/allow-health-checks",
            "log_config": [],
            "name": "allow-health-checks",
            "network": "https://www.googleapis.com/compute/v1/projects/sunlit-flag-351808/global/networks/webapi-net",
            "priority": 1000,
            "project": "sunlit-flag-351808",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sunlit-flag-351808/global/firewalls/allow-health-checks",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "thrift-api"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-06-07T11:31:53.445-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sunlit-flag-351808/global/firewalls/allow-internal-ssh",
            "log_config": [],
            "name": "allow-internal-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/sunlit-flag-351808/global/networks/webapi-net",
            "priority": 1000,
            "project": "sunlit-flag-351808",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sunlit-flag-351808/global/firewalls/allow-internal-ssh",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "mysql-server",
              "thrift-api"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "3306"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-06-10T05:17:59.522-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sunlit-flag-351808/global/firewalls/allow-internal-traffic",
            "log_config": [],
            "name": "allow-internal-traffic",
            "network": "https://www.googleapis.com/compute/v1/projects/sunlit-flag-351808/global/networks/webapi-net",
            "priority": 1000,
            "project": "sunlit-flag-351808",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sunlit-flag-351808/global/firewalls/allow-internal-traffic",
            "source_ranges": [
              "10.240.0.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "webapi_static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.110.186.225",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-06-07T11:31:53.346-07:00",
            "id": "projects/sunlit-flag-351808/global/addresses/webapi-static-ip",
            "name": "webapi-static-ip",
            "prefix_length": 0,
            "project": "sunlit-flag-351808",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sunlit-flag-351808/global/addresses/webapi-static-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/sunlit-flag-351808/global/forwardingRules/http-redirect",
            "ip_address": "projects/sunlit-flag-351808/global/addresses/webapi-static-ip",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "http-redirect",
            "port_range": "80",
            "project": "sunlit-flag-351808",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sunlit-flag-351808/global/forwardingRules/http-redirect",
            "target": "https://www.googleapis.com/compute/v1/projects/sunlit-flag-351808/global/targetHttpProxies/http-redirect"
          },
          "dependencies": [
            "google_compute_global_address.webapi_static_ip",
            "google_compute_target_http_proxy.http_redirect",
            "google_compute_url_map.http_redirect"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "webapi_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/sunlit-flag-351808/global/forwardingRules/webapi-forwarding-rule",
            "ip_address": "projects/sunlit-flag-351808/global/addresses/webapi-static-ip",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "webapi-forwarding-rule",
            "port_range": "443",
            "project": "sunlit-flag-351808",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sunlit-flag-351808/global/forwardingRules/webapi-forwarding-rule",
            "target": "projects/sunlit-flag-351808/global/targetHttpsProxies/webapi-https-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.webapi_backend",
            "google_compute_global_address.webapi_static_ip",
            "google_compute_health_check.webapi_lb_hc",
            "google_compute_managed_ssl_certificate.webapi_ssl",
            "google_compute_target_https_proxy.webapi_https_proxy",
            "google_compute_url_map.webapi_url_map",
            "module.container-vm.data.google_compute_image.coreos",
            "module.vm_instance_template.google_compute_instance_template.tpl",
            "module.vm_mig.data.google_compute_zones.available",
            "module.vm_mig.google_compute_health_check.http",
            "module.vm_mig.google_compute_health_check.https",
            "module.vm_mig.google_compute_health_check.tcp",
            "module.vm_mig.google_compute_region_instance_group_manager.mig"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "mysql_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "attached_disk": [
              {
                "device_name": "persistent-disk-1",
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/sunlit-flag-351808/zones/asia-southeast2-c/disks/mysql-data-disk"
              }
            ],
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-minimal-2004-focal-v20220609",
                    "size": 12,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/sunlit-flag-351808/zones/asia-southeast2-c/disks/mysql-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/sunlit-flag-351808/zones/asia-southeast2-c/instances/mysql-instance",
            "instance_id": "2315578320249327333",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "startup-script-url": "https://raw.githubusercontent.com/thrifthunter/infrastructure/main/startup-script/mysql-server.sh"
            },
            "metadata_fingerprint": "fmasn4LNmqU=",
            "name": "mysql-instance",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/sunlit-flag-351808/global/networks/webapi-net",
                "network_ip": "10.240.0.36",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/sunlit-flag-351808/regions/asia-southeast2/subnetworks/webapi-subnet",
                "subnetwork_project": "sunlit-flag-351808"
              }
            ],
            "project": "sunlit-flag-351808",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/sunlit-flag-351808/zones/asia-southeast2-c/instances/mysql-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "mysql-server"
            ],
            "tags_fingerprint": "kIxk74kcEu8=",
            "zone": "asia-southeast2-c"
          },
          "dependencies": [
            "google_compute_address.mysql_private_ip",
            "google_compute_disk.mysql_disk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "webapi_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/sunlit-flag-351808/global/networks/webapi-net",
            "mtu": 0,
            "name": "webapi-net",
            "project": "sunlit-flag-351808",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sunlit-flag-351808/global/networks/webapi-net"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "webapi_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-06-07T11:31:53.551-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/sunlit-flag-351808/regions/asia-southeast2/routers/webapi-router",
            "name": "webapi-router",
            "network": "https://www.googleapis.com/compute/v1/projects/sunlit-flag-351808/global/networks/webapi-net",
            "project": "sunlit-flag-351808",
            "region": "asia-southeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sunlit-flag-351808/regions/asia-southeast2/routers/webapi-router"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "webapi_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "sunlit-flag-351808/asia-southeast2/webapi-router/webapi-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "min_ports_per_vm": 0,
            "name": "webapi-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "sunlit-flag-351808",
            "region": "asia-southeast2",
            "router": "webapi-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_router.webapi_router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "webapi_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-06-07T11:31:54.846-07:00",
            "gateway_address": "10.240.0.1",
            "id": "projects/sunlit-flag-351808/regions/asia-southeast2/subnetworks/webapi-subnet",
            "ip_cidr_range": "10.240.0.0/20",
            "name": "webapi-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/sunlit-flag-351808/global/networks/webapi-net",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "sunlit-flag-351808",
            "purpose": "PRIVATE",
            "region": "asia-southeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sunlit-flag-351808/regions/asia-southeast2/subnetworks/webapi-subnet",
            "stack_type": "IPV4_ONLY"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-06-07T11:31:21.121-07:00",
            "id": "projects/sunlit-flag-351808/global/targetHttpProxies/http-redirect",
            "name": "http-redirect",
            "project": "sunlit-flag-351808",
            "proxy_bind": false,
            "proxy_id": 370382250299238294,
            "self_link": "https://www.googleapis.com/compute/v1/projects/sunlit-flag-351808/global/targetHttpProxies/http-redirect",
            "url_map": "https://www.googleapis.com/compute/v1/projects/sunlit-flag-351808/global/urlMaps/http-redirect"
          },
          "dependencies": [
            "google_compute_url_map.http_redirect"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "webapi_https_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-06-07T11:34:19.052-07:00",
            "id": "projects/sunlit-flag-351808/global/targetHttpsProxies/webapi-https-proxy",
            "name": "webapi-https-proxy",
            "project": "sunlit-flag-351808",
            "proxy_bind": false,
            "proxy_id": 3199621111053690052,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sunlit-flag-351808/global/targetHttpsProxies/webapi-https-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/sunlit-flag-351808/global/sslCertificates/webapi-cert"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/sunlit-flag-351808/global/urlMaps/webapi-url-map"
          },
          "dependencies": [
            "google_compute_backend_service.webapi_backend",
            "google_compute_health_check.webapi_lb_hc",
            "google_compute_managed_ssl_certificate.webapi_ssl",
            "google_compute_url_map.webapi_url_map",
            "module.container-vm.data.google_compute_image.coreos",
            "module.vm_instance_template.google_compute_instance_template.tpl",
            "module.vm_mig.data.google_compute_zones.available",
            "module.vm_mig.google_compute_health_check.http",
            "module.vm_mig.google_compute_health_check.https",
            "module.vm_mig.google_compute_health_check.tcp",
            "module.vm_mig.google_compute_region_instance_group_manager.mig"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "http_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-06-07T11:31:09.334-07:00",
            "default_route_action": [],
            "default_service": "",
            "default_url_redirect": [
              {
                "host_redirect": "",
                "https_redirect": true,
                "path_redirect": "",
                "prefix_redirect": "",
                "redirect_response_code": "MOVED_PERMANENTLY_DEFAULT",
                "strip_query": false
              }
            ],
            "description": "",
            "fingerprint": "CJcRHhGbnSY=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/sunlit-flag-351808/global/urlMaps/http-redirect",
            "map_id": 3390586266250782594,
            "name": "http-redirect",
            "path_matcher": [],
            "project": "sunlit-flag-351808",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sunlit-flag-351808/global/urlMaps/http-redirect",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "webapi_url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-06-07T11:34:06.939-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/sunlit-flag-351808/global/backendServices/webapi-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "8mtuGCigec8=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/sunlit-flag-351808/global/urlMaps/webapi-url-map",
            "map_id": 8922469234004600049,
            "name": "webapi-url-map",
            "path_matcher": [],
            "project": "sunlit-flag-351808",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sunlit-flag-351808/global/urlMaps/webapi-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.webapi_backend",
            "google_compute_health_check.webapi_lb_hc",
            "module.container-vm.data.google_compute_image.coreos",
            "module.vm_instance_template.google_compute_instance_template.tpl",
            "module.vm_mig.data.google_compute_zones.available",
            "module.vm_mig.google_compute_health_check.http",
            "module.vm_mig.google_compute_health_check.https",
            "module.vm_mig.google_compute_health_check.tcp",
            "module.vm_mig.google_compute_region_instance_group_manager.mig"
          ]
        }
      ]
    }
  ]
}